# pepsistreamy

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  run.ps1
legacy/: README.md  requirements.txt
legacy/pepsistreamy/: bot.py  source.py
pepsistreamy/: __init__.py  capture.py  cli.py
rust/: .env.example  Cargo.toml  README.md
rust/src/: bot.rs  capture.rs  dsp.rs  main.rs  settings.rs  setup.rs  tui.rs
src/: b64.rs  bot.rs  capture.rs  main.rs  monitor.rs  process.rs  setup.rs  tui.rs
