[package]
name = "pepsistreamy"
version = "2.0.0"
edition = "2024"
description = "내 PC 소리(유튜브 등)를 디스코드 음성 채널로 실시간 방송하는 네이티브 CLI"
license = "MIT"
repository = "https://github.com/ssapgosu12/pepsistreamy"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
ratatui = "0.30.1"
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
songbird = "0.6.0"
sysinfo = { version = "0.39.3", default-features = false, features = ["system"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "signal"] }
wasapi = "0.23.0"
windows-sys = { version = "0.61", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

# 단일 배포 바이너리를 작게: 심볼 제거 + LTO. (패닉 unwinding 유지 → 핸들러 패닉이 봇 전체를 죽이지 않음)
[profile.release]
strip = true
lto = true
codegen-units = 1
